[package]
name = "tokio-uds"
version = "0.1.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/tokio-uds"
homepage = "https://github.com/tokio-rs/tokio-uds"
documentation = "https://docs.rs/tokio-uds"
description = """
Unix Domain sockets for Tokio
"""
categories = ["asynchronous"]

[badges]
travis-ci = { repository = "tokio-rs/tokio-uds" }
appveyor = { repository = "alexcrichton/tokio-uds" }

[dependencies]
mio = { git = "https://github.com/carllerche/mio" }
iovec = { git = "https://github.com/carllerche/iovec" }
mio-uds = { git = "https://github.com/alexcrichton/mio-uds", branch = "tio" }
log = "0.3"
tokio-io = { git = "https://github.com/alexcrichton/tokio-io" }
bytes = { git = "https://github.com/carllerche/bytes" }
libc = "0.2"

[dependencies.tokio-core]
git = "https://github.com/alexcrichton/tokio-core"
default-features = false
branch = "tio"
features = ["use_std"]

[dependencies.futures]
git = "https://github.com/alexcrichton/futures-rs"
branch = "close"
default-features = false
features = ["use_std"]
